--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -53,5 +53,12 @@
   "SATURDAY": "SATURDAY",
 
   "ON": "ON",
-  "OFF": "OFF"
+  "OFF": "OFF",
+
+  "BARS": "BARS",
+  "PROFILE": "PROFILE",
+  "PUSH_NOTIFICATIONS": "PUSH NOTIFICATIONS",
+  "TERMS_OF_SERVICE": "TERMS OF SERVICE",
+  "PRIVACY_POLICY": "PRIVACY POLICY",
+  "SEND_FEEDBACK": "SEND FEEDBACK"
 }
