Redux Saga + Firebase Integration + User Profiles

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -1,6 +1,6 @@
 {
    "signIn": "Sign In",
-   "logOut": "Log Out",
+   "LOGOUT": "Log Out",
    "loginLogoutExampleTitle": "Login/Logout Redux + Sagas Example",
    "progressiveImageComponent": "Progressive Image Component",
    "api": "API",
