Add sponsored screen

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -23,6 +23,7 @@
    "deviceDetails": "Device Details",
    "noItems": "No Items",
    "search": "Search",
+   "close": "Close",
 
   "Introduction_welcome": "MEET NEW FRIENDS ON ALKO",
   "Introduction_aboutAlko": "ALKO is about making new friends at your favorite bars. When you open ALKO, you’ll see which bars have Drink-Ups going on. Click on the bar, request an invitation, and share some drinks with new people.",
