--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -57,6 +57,11 @@
   "Bar_ItsJustMe_Footer": "waiting for new friends to join...",
   "Bar_ItsJustMe_Button": "Cancel the Drink-up",
 
+  "Drinkup_JoinDrinkUpAndGet2For1Drinks": "Join the Drink-up and get 2 for 1 drinks",
+  "Drinkup_JoinDrinkUp": "Join the Drink-up",
+  "Drinkup_CancelRequest": "cancel request",
+  "Drinkup_WaitingInvite": "waiting on the invite...",
+
   "SUNDAY": "SUNDAY",
   "MONDAY": "MONDAY",
   "TUESDAY": "TUESDAY",
