Push Alerts, Sponsored Screens, Drink Up Screen

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -45,6 +45,8 @@
   "Introduction_step4_btn": "Allow push notifications",
   "Introduction_step4_disallow": "no, maybe later",
 
+  "DrinkUp_MainScreen_Promotion": "Thursday 8p - 2a @ License No 1",
+
   "Bar_StartADrinkUp": "Start a Drink-up",
   "Bar_StartADrinkUpForSpecial": "Start a Drink-Up for a 2-for-1 Special",
   "Bar_OkayLetsDoThis_Header" : "Okay, let's do this.",
