--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -63,6 +63,8 @@
   "Drinkup_JoinDrinkUp": "Join the Drink-up",
   "Drinkup_CancelRequest": "cancel request",
   "Drinkup_WaitingInvite": "waiting on the invite...",
+  "Drinkup_ClickToGet2For1ALKOSpecial": "Click to get the 2 for 1 ALKO special",
+  "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
 
   "SUNDAY": "SUNDAY",
   "MONDAY": "MONDAY",
