--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -66,6 +66,11 @@
   "Drinkup_ClickToGet2For1ALKOSpecial": "Click to get the 2 for 1 ALKO special",
   "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
 
+  "Redeem_ALKO": "ALKO",
+  "Redeem_2For1Special": "2 FOR 1 SPECIAL",
+  "Redeem_ThisDealWillDisappear": "this deal will disappear",
+  "Redeem_GuideToRedeem": "Show this to the bartender to receive a free drink for a new friend when you purchase on for yourself.",
+
   "SUNDAY": "SUNDAY",
   "MONDAY": "MONDAY",
   "TUESDAY": "TUESDAY",
