--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -65,6 +65,8 @@
   "Drinkup_WaitingInvite": "waiting on the invite...",
   "Drinkup_ClickToGet2For1ALKOSpecial": "Click to get the 2 for 1 ALKO special",
   "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
+  "Drinkup_Says": "says...",
+  "Drinkup_WantToJoin": "wants to join!",
 
   "Redeem_ALKO": "ALKO",
   "Redeem_2For1Special": "2 FOR 1 SPECIAL",
