Add Lobby State for Drinkup

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -67,6 +67,9 @@
   "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
   "Drinkup_Says": "says...",
   "Drinkup_WantToJoin": "wants to join!",
+  "Drinkup_NeedDirection": "Need Direction?",
+  "Drinkup_GoogleMap": "Google maps",
+  "Drinkup_AppleMap": "Apple maps",
 
   "Redeem_ALKO": "ALKO",
   "Redeem_2For1Special": "2 FOR 1 SPECIAL",
