Dialog Image Style and Report link

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -70,7 +70,9 @@
   "Drinkup_NeedDirection": "Need Direction?",
   "Drinkup_GoogleMap": "Google maps",
   "Drinkup_AppleMap": "Apple maps",
+  "Drinkup_SendInvite": "Send an invite",
 
+  "report": "report",
   "Redeem_ALKO": "ALKO",
   "Redeem_2For1Special": "2 FOR 1 SPECIAL",
   "Redeem_ThisDealWillDisappear": "this deal will disappear",
