--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -67,7 +67,7 @@
   "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
   "Drinkup_Says": "says...",
   "Drinkup_WantToJoin": "wants to join!",
-  "Drinkup_NeedDirection": "Need Direction?",
+  "Drinkup_NeedDirection": "Need directions?",
   "Drinkup_GoogleMap": "Google maps",
   "Drinkup_AppleMap": "Apple maps",
   "Drinkup_SendInvite": "Send an invite",
