--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -75,7 +75,7 @@
   "report": "report",
   "Redeem_ALKO": "ALKO",
   "Redeem_2For1Special": "2 FOR 1 SPECIAL",
-  "Redeem_ThisDealWillDisappear": "this deal will disappear",
+  "Redeem_ThisDealWillDisappear": "this deal will disappear in",
   "Redeem_GuideToRedeem": "Show this to the bartender to receive a free drink for a new friend when you purchase on for yourself.",
 
   "Main_banner_title": "Join the Drink-up & get 2 for 1 drinks",
