Drink Up Scenes + Fixture Data working

--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -59,6 +59,7 @@
   "Bar_ItsJustMe_Footer": "waiting for new friends to join...",
   "Bar_ItsJustMe_Button": "Cancel the Drink-up",
 
+  "DRINK_UP": "DRINK UP",
   "Drinkup_JoinDrinkUpAndGet2For1Drinks": "Join the Drink-up and get 2 for 1 drinks",
   "Drinkup_JoinDrinkUp": "Join the Drink-up",
   "Drinkup_CancelRequest": "cancel request",
