--- a/App/I18n/english.json
+++ b/App/I18n/english.json
@@ -75,6 +75,8 @@
   "Drinkup_LeaveTheDrinkUp": "leave the Drink-up",
   "Drinkup_Says": "says...",
   "Drinkup_WantToJoin": "wants to join!",
+  "Drinkup_AcceptedInviteMessage": "Sweet, you're in!",
+  "Drinkup_MeetNewPeople": "Let's meet new people",
   "Drinkup_NeedDirection": "Need directions?",
   "Drinkup_GoogleMap": "Google maps",
   "Drinkup_AppleMap": "Apple maps",
